Bug 341212 - Tabs in KDE Telepathy Text UI marks as unread always when going online after upgrade to 0.9
Summary: Tabs in KDE Telepathy Text UI marks as unread always when going online after ...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: 0.9.0
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-24 06:46 UTC by Murz
Modified: 2015-02-26 16:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Murz 2014-11-24 06:46:33 UTC
On KDE Telepathy 0.8.1 all works well, but after upgrade to 0.9 I see that always when I go online (after offline with keep Text UI window open with dialog tabs) all tabs show that they have unread messages. Seems that something like "You are now marked as Available" in chat logs acts as new message. Can you fix this?

Reproducible: Always

Steps to Reproduce:
1. Open some chat dialogs in Text UI and keep 2 or more tabs open
2. Go offline with keeping open Text UI window with tabs open.
3. Go online.

Actual Results:  
You will see that all tabs marks as unread (shows that contacts send you new messages)
Comment 1 Murz 2015-02-18 06:23:07 UTC
Playing with all settings (hide status changes, hide header, hide contact join/leave) isn't help. Is this problem reproducible in your enviropment? Is there any workaround for solve this problem?
Comment 2 Martin Klapetek 2015-02-18 11:03:39 UTC
It has to do with the OTR iirc. I don't understand it much, but basically after you reconnect, some OTR renegotiation is going on and those messages are not displayed. I thought we fixed this case already though.

Marcin, can you comment?
Comment 3 Murz 2015-02-26 07:15:28 UTC
Disabling OTR feature in options didn't help too :(
Comment 4 Martin Klapetek 2015-02-26 16:49:06 UTC
Git commit 99d06d80a0725ff6718fa6143f9943b31106304b by Martin Klapetek.
Committed on 26/02/2015 at 16:48.
Pushed by mklapetek into branch 'master'.

Don't set the OTR state as changed if it actually hasn't changed

Fixes the bug of "unread message" color tab on channel reconnect

M  +4    -0    lib/chat-widget.cpp

http://commits.kde.org/telepathy-text-ui/99d06d80a0725ff6718fa6143f9943b31106304b