Don't set the OTR state as changed if it actually hasn't changed

Fixes the bug of "unread message" color tab on channel reconnect

BUG: 341212